feat(i18n): add Tehran and Qazvin to service areas + translation fixes
Service Areas:

- Added Tehran and Qazvin locations to English and Arabic service-areas.json

- Persian already had these locations

- All languages now have 4 locations: Muscat, Dubai, Tehran, Qazvin

- Fixed ServiceAreas.tsx link generation to include /service-areas/ prefix

Translation Fixes:

- Added missing 'title' and 'description' keys to home.json (en, fa, ar)

- Added missing WordPress feature keys (customTheme, woocommerce, pluginDev, responsive) to wordpress.json

Fixes:

- /fa/tehran now correctly routes to /fa/service-areas/tehran

- /fa/qazvin now correctly routes to /fa/service-areas/qazvin

- Homepage metadata now displays correctly

--- a/src/i18n/ar/home.json
+++ b/src/i18n/ar/home.json
@@ -1,5 +1,6 @@
-
 {
+  "title": "ويب إيه بي سي | خدمات احترافية لتحسين محركات البحث وتصميم الويب",
+  "description": "مزود خدمات متخصصة في تحسين محركات البحث وتقنيات السيو، تصميم الويب وتطوير تطبيقات الويب بأحدث التقنيات",
   "heroTitle": "ويب إيه بي سي | خدمات احترافية لتحسين محركات البحث وتصميم الويب",
   "heroDescription": "مزود خدمات متخصصة في تحسين محركات البحث وتقنيات السيو، تصميم الويب وتطوير تطبيقات الويب بأحدث التقنيات",
   "heroKeywords": "تصميم مواقع، سيو، تحسين المواقع، تصميم ويب، تسويق رقمي، ووردبريس",
