--- a/src/i18n/ar/service-areas.json
+++ b/src/i18n/ar/service-areas.json
@@ -67,6 +67,60 @@
         "clients": "50+",
         "experience": "6+"
       }
+    },
+    {
+      "name": "طهران",
+      "slug": "tehran",
+      "country": "إيران",
+      "description": "نقدم خدمات تصميم الويب وتحسين محركات البحث المتقدمة للشركات في طهران. نساعد الشركات الإيرانية على إنشاء حضور قوي على الإنترنت والوصول بفعالية إلى جمهورها المستهدف.",
+      "longDescription": "باعتبارنا وكالة تصميم الويب وتحسين محركات البحث الرائدة في طهران، نحن متخصصون في مساعدة الشركات المحلية على السيطرة على الفضاء الرقمي. يفهم فريقنا الميزات الفريدة للسوق الإيراني ويخلق حلولاً مخصصة تتردد صداها مع جمهورك المستهدف.",
+      "services": [
+        "تصميم وتطوير المواقع",
+        "خدمات تحسين محركات البحث",
+        "حلول التجارة الإلكترونية",
+        "التسويق الرقمي",
+        "تطوير ووردبريس"
+      ],
+      "image": "/images/locations/tehran.jpg",
+      "benefits": [
+        "خبرة السوق المحلي في طهران",
+        "دعم اللغة الفارسية والإنجليزية",
+        "تصاميم سريعة الاستجابة للموبايل",
+        "سرعة تحميل محسّنة لإيران",
+        "الدعم والصيانة المستمرة"
+      ],
+      "stats": {
+        "projects": "80+",
+        "clients": "60+",
+        "experience": "7+"
+      }
+    },
+    {
+      "name": "قزوين",
+      "slug": "qazvin",
+      "country": "إيران",
+      "description": "تقديم حلول رقمية احترافية للشركات في قزوين. تساعد خدماتنا الشركات المقيمة في قزوين على النجاح في السوق التنافسي بحلول ويب مبتكرة.",
+      "longDescription": "تتطلب بيئة الأعمال الديناميكية في قزوين حضورًا رقميًا استثنائيًا. نحن ننشئ مواقع ويب مذهلة وننفذ استراتيجيات تحسين محركات بحث قوية تساعد عملك على التميز في واحدة من أكثر الأسواق تنافسية.",
+      "services": [
+        "تطوير الويب المخصص",
+        "تحسين محركات البحث المحلية",
+        "تطوير تطبيقات الموبايل",
+        "استراتيجية العلامة التجارية",
+        "تسويق المحتوى"
+      ],
+      "image": "/images/locations/qazvin.jpg",
+      "benefits": [
+        "فهم ثقافة الأعمال في قزوين",
+        "حلول المواقع متعددة اللغات",
+        "خبرة في التجارة الإلكترونية",
+        "استراتيجيات رقمية تركز على النتائج",
+        "دعم 24/7"
+      ],
+      "stats": {
+        "projects": "45+",
+        "clients": "35+",
+        "experience": "5+"
+      }
     }
   ]
 }
