--- a/src/i18n/ar/wordpress.json
+++ b/src/i18n/ar/wordpress.json
@@ -1,4 +1,3 @@
-
 {
   "title": "خدمات تطوير مواقع ووردبريس",
   "subtitle": "حلول مخصصة لمواقع ووردبريس تجمع بين الأداء العالي وسهولة الاستخدام",
@@ -41,5 +40,13 @@
         "description": "إمكانية إضافة ميزات جديدة بسهولة مع نمو عملك"
       }
     ]
-  }
+  },
+  "customTheme": "تصميم قالب مخصص",
+  "customThemeDesc": "تصميم قالب ووردبريس فريد واحترافي مصمم خصيصًا لهوية علامتك التجارية",
+  "woocommerce": "إعداد متجر ووكومرس",
+  "woocommerceDesc": "حل تجارة إلكترونية كامل مع بوابات الدفع وإدارة المخزون",
+  "pluginDev": "تطوير إضافات مخصصة",
+  "pluginDevDesc": "تطوير إضافات مخصصة لتوسيع وظائف ووردبريس الخاصة بك",
+  "responsive": "تصميم متجاوب",
+  "responsiveDesc": "تصميم متوافق مع الأجهزة المحمولة يعمل بشكل مثالي على جميع الأجهزة"
 }
