--- a/src/i18n/en/home.json
+++ b/src/i18n/en/home.json
@@ -1,5 +1,6 @@
-
 {
+  "title": "WebABC | Professional SEO and Web Design Services",
+  "description": "Provider of specialized SEO and search engine optimization services, web design and web application development with the latest technologies",
   "heroTitle": "WebABC | Professional SEO and Web Design Services",
   "heroDescription": "Provider of specialized SEO and search engine optimization services, web design and web application development with the latest technologies",
   "heroKeywords": "website design, SEO, site optimization, web design, digital marketing, WordPress",
