--- a/src/i18n/fa/home.json
+++ b/src/i18n/fa/home.json
@@ -1,5 +1,6 @@
-
 {
+  "title": "وب اِی‌بی‌سی | خدمات حرفه‌ای سئو و طراحی وب",
+  "description": "ارائه‌دهنده خدمات تخصصی سئو و بهینه‌سازی موتور جستجو، طراحی وب و توسعه اپلیکیشن وب با آخرین فناوری‌ها",
   "heroTitle": "وب اِی‌بی‌سی | خدمات حرفه‌ای سئو و طراحی وب",
   "heroDescription": "ارائه‌دهنده خدمات تخصصی سئو و بهینه‌سازی موتور جستجو، طراحی وب و توسعه اپلیکیشن وب با آخرین فناوری‌ها",
   "heroKeywords": "طراحی وب‌سایت، سئو، بهینه‌سازی سایت، طراحی وب، دیجیتال مارکتینگ، وردپرس",
