--- a/src/i18n/fa/wordpress.json
+++ b/src/i18n/fa/wordpress.json
@@ -1,4 +1,3 @@
-
 {
   "title": "توسعه حرفه‌ای وردپرس و ووکامرس",
   "subtitle": "ایجاد سایت‌های وردپرس سفارشی و فروشگاه‌های آنلاین ووکامرس با طراحی منحصر به فرد و عملکرد بهینه",
@@ -29,5 +28,13 @@
   "performanceOptimization": "بهینه‌سازی عملکرد",
   "maintenanceSupport": "نگهداری و پشتیبانی",
   "seoOptimization": "بهینه‌سازی سئو",
-  "contentCreation": "تولید محتوا"
+  "contentCreation": "تولید محتوا",
+  "customTheme": "طراحی قالب سفارشی",
+  "customThemeDesc": "طراحی قالب وردپرس منحصر به فرد و حرفه‌ای متناسب با هویت برند شما",
+  "woocommerce": "راه‌اندازی فروشگاه ووکامرس",
+  "woocommerceDesc": "راهکار فروشگاهی کامل با درگاه‌های پرداخت و مدیریت موجودی",
+  "pluginDev": "توسعه افزونه سفارشی",
+  "pluginDevDesc": "توسعه افزونه‌های سفارشی برای گسترش عملکرد وردپرس شما",
+  "responsive": "طراحی رسپانسیو",
+  "responsiveDesc": "طراحی سازگار با موبایل که به طرز کامل بر روی همه دستگاه‌ها کار می‌کند"
 }
