--- a/src/i18n/ar/contact.json
+++ b/src/i18n/ar/contact.json
@@ -1,5 +1,6 @@
-
 {
+  "title": "اتصل بنا",
+  "subtitle": "تواصل مع فريقنا",
   "getInTouch": "اتصل بنا",
   "contactInfo": "معلومات الاتصال",
   "sendMessage": "أرسل لنا رسالة",
