--- a/src/i18n/ar/web-development-services.json
+++ b/src/i18n/ar/web-development-services.json
@@ -1,4 +1,6 @@
 {
+  "title": "خدمات تطوير الويب",
+  "subtitle": "حلول تطوير الويب المخصصة",
   "webDevelopmentTitle": "خدمات تطوير الويب",
   "webDevelopmentDescription": "نحن نقدم خدمات تطوير الويب الشاملة لتحويل أفكارك إلى واقع.",
   "ourServices": "خدماتنا",
