--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -52,6 +52,7 @@
   "blog": "Blog",
   "services": "Services",
   "company": "Company",
+  "companyName": "WebABC",
   "resources": "Resources",
   "copyright": "© {year} WebABC. All rights reserved.",
   "privacyPolicy": "Privacy Policy",
