--- a/src/i18n/en/contact.json
+++ b/src/i18n/en/contact.json
@@ -1,5 +1,6 @@
-
 {
+  "title": "Contact Us",
+  "subtitle": "Get in Touch with Our Team",
   "getInTouch": "Get In Touch",
   "contactInfo": "Contact Information",
   "sendMessage": "Send Us A Message",
