--- a/src/i18n/en/web-development-services.json
+++ b/src/i18n/en/web-development-services.json
@@ -1,4 +1,6 @@
 {
+  "title": "Web Development Services",
+  "subtitle": "Custom Web Development Solutions",
   "webDevelopmentTitle": "Web Development Services",
   "webDevelopmentDescription": "We offer comprehensive web development services to bring your ideas to life.",
   "ourServices": "Our Services",
