--- a/src/i18n/fa/common.json
+++ b/src/i18n/fa/common.json
@@ -52,6 +52,7 @@
   "blog": "وبلاگ",
   "services": "خدمات",
   "company": "شرکت",
+  "companyName": "وب اِی‌بی‌سی",
   "resources": "منابع",
   "copyright": "© {year} وب‌اِی‌بی‌سی. تمامی حقوق محفوظ است.",
   "privacyPolicy": "سیاست حفظ حریم خصوصی",
