--- a/src/i18n/fa/contact.json
+++ b/src/i18n/fa/contact.json
@@ -1,5 +1,6 @@
-
 {
+  "title": "تماس با ما",
+  "subtitle": "با تیم ما در ارتباط باشید",
   "getInTouch": "تماس با ما",
   "contactInfo": "اطلاعات تماس",
   "sendMessage": "پیام خود را ارسال کنید",
