--- a/src/i18n/fa/portfolio.json
+++ b/src/i18n/fa/portfolio.json
@@ -1,4 +1,3 @@
-
 {
   "title": "نمونه کارهای ما",
   "description": "پروژه‌های موفق ما در صنایع مختلف را بررسی کنید",
@@ -16,6 +15,13 @@
   "results": "نتایج",
   "testimonial": "نظر مشتری",
   "relatedProjects": "پروژه‌های مرتبط",
+  "viewDetails": "مشاهده جزئیات",
+  "viewProject": "مشاهده پروژه",
+  "projectDetails": "جزئیات پروژه",
+  "projectOverview": "بررسی اجمالی پروژه",
+  "keyResults": "نتایج کلیدی",
+  "needSimilarProject": "به پروژه مشابهی نیاز دارید؟",
+  "ctaDescription": "امروز با ما تماس بگیرید تا در مورد نیازهای پروژه خود صحبت کنید و مشاوره رایگان دریافت کنید.",
   "caseStudies": {
     "title": "مطالعات موردی",
     "subtitle": "داستان‌های موفقیت و مطالعات موردی",
