--- a/src/i18n/fa/web-development-services.json
+++ b/src/i18n/fa/web-development-services.json
@@ -1,4 +1,6 @@
 {
+  "title": "خدمات توسعه وب",
+  "subtitle": "راهکارهای توسعه وب سفارشی",
   "webDevelopmentTitle": "خدمات توسعه وب",
   "webDevelopmentDescription": "ما خدمات جامع توسعه وب را برای به ثمر رساندن ایده‌های شما ارائه می‌دهیم.",
   "ourServices": "خدمات ما",
