Refactor toast component to remove Radix UI and sonner, fix NavLinks type error, and update i18n/views

--- a/src/i18n/ar/web-development-services.json
+++ b/src/i18n/ar/web-development-services.json
@@ -1,24 +1,26 @@
 {
   "title": "خدمات تطوير الويب",
-  "subtitle": "حلول تطوير الويب المخصصة",
+  "subtitle": "حلول تطوير ويب مخصصة",
   "webDevelopmentTitle": "خدمات تطوير الويب",
-  "webDevelopmentDescription": "نحن نقدم خدمات تطوير الويب الشاملة لتحويل أفكارك إلى واقع.",
+  "webDevelopmentDescription": "نقدم خدمات تطوير ويب شاملة لتحويل أفكارك إلى واقع.",
   "ourServices": "خدماتنا",
-  "frontendDev": "تطوير الواجهة الأمامية",
+  "frontendDev": "تطوير الواجهة الأمامية (Frontend)",
   "frontendDesc": "نقوم ببناء واجهات مستخدم جميلة ومتجاوبة.",
-  "backendDev": "تطوير الواجهة الخلفية",
-  "backendDesc": "نقوم بتطوير أنظمة خلفية قوية وقابلة للتطوير.",
-  "feature.uiuxDesign": "تصميم واجهة المستخدم/تجربة المستخدم",
-  "feature.reactNextjs": "تطوير React و Next.js",
-  "feature.responsiveDesign": "تصميم متجاوب",
-  "feature.webVitals": "تحسين مقاييس أداء الويب",
-  "feature.animations": "الرسوم المتحركة والتفاعلات",
-  "feature.apiIntegration": "تكامل واجهة برمجة التطبيقات",
-  "feature.restApi": "تطوير واجهة برمجة التطبيقات REST",
-  "feature.python": "تطوير بايثون",
-  "feature.nodejs": "تطوير Node.js",
-  "feature.database": "تصميم وإدارة قواعد البيانات",
-  "feature.auth": "المصادقة والترخيص",
-  "feature.cloudIntegration": "تكامل السحابة",
+  "backendDev": "تطوير الواجهة الخلفية (Backend)",
+  "backendDesc": "نقوم بتطوير أنظمة خلفية قوية وقابلة للتوسع.",
+  "feature": {
+    "uiuxDesign": "تصميم واجهة وتجربة المستخدم",
+    "reactNextjs": "تطوير React و Next.js",
+    "responsiveDesign": "تصميم متجاوب",
+    "webVitals": "تحسين مؤشرات الويب الحيوية",
+    "animations": "الرسوم المتحركة والتفاعلات",
+    "apiIntegration": "تكامل واجهة برمجة التطبيقات (API)",
+    "restApi": "تطوير REST API",
+    "python": "تطوير بايثون",
+    "nodejs": "تطوير Node.js",
+    "database": "تصميم وإدارة قواعد البيانات",
+    "auth": "المصادقة والترخيص",
+    "cloudIntegration": "التكامل السحابي"
+  },
   "keywords": "تطوير الويب, خدمات, react, nextjs"
 }
