--- a/src/i18n/en/web-development-services.json
+++ b/src/i18n/en/web-development-services.json
@@ -8,17 +8,19 @@
   "frontendDesc": "We build beautiful and responsive user interfaces.",
   "backendDev": "Backend Development",
   "backendDesc": "We develop robust and scalable backend systems.",
-  "feature.uiuxDesign": "UI/UX Design",
-  "feature.reactNextjs": "React & Next.js Development",
-  "feature.responsiveDesign": "Responsive Design",
-  "feature.webVitals": "Web Vitals Optimization",
-  "feature.animations": "Animations & Interactions",
-  "feature.apiIntegration": "API Integration",
-  "feature.restApi": "REST API Development",
-  "feature.python": "Python Development",
-  "feature.nodejs": "Node.js Development",
-  "feature.database": "Database Design & Management",
-  "feature.auth": "Authentication & Authorization",
-  "feature.cloudIntegration": "Cloud Integration",
+  "feature": {
+    "uiuxDesign": "UI/UX Design",
+    "reactNextjs": "React & Next.js Development",
+    "responsiveDesign": "Responsive Design",
+    "webVitals": "Web Vitals Optimization",
+    "animations": "Animations & Interactions",
+    "apiIntegration": "API Integration",
+    "restApi": "REST API Development",
+    "python": "Python Development",
+    "nodejs": "Node.js Development",
+    "database": "Database Design & Management",
+    "auth": "Authentication & Authorization",
+    "cloudIntegration": "Cloud Integration"
+  },
   "keywords": "web development, services, react, nextjs"
 }
