--- a/src/i18n/fa/services.json
+++ b/src/i18n/fa/services.json
@@ -1,4 +1,3 @@
-
 {
   "sectionTag": "خدمات ما",
   "sectionTitle": {
@@ -9,9 +8,30 @@
   "sectionDescription": "ما خدمات جامع سئو و توسعه وب را برای کمک به موفقیت آنلاین کسب و کار شما ارائه می‌دهیم. تمام خدمات ما طبق آخرین استانداردهای جهانی طراحی شده و برای نیازهای خاص بازار سفارشی‌سازی شده‌اند.",
   "title": "خدمات حرفه‌ای سئو و توسعه وب",
   "description": "راهکارهای جامع دیجیتال مارکتینگ برای رشد کسب و کار شما. با استفاده از آخرین فناوری‌ها و تکنیک‌های پیشرفته، وب‌سایت شما را به ابزاری قدرتمند برای جذب مشتری تبدیل می‌کنیم.",
+  "wordpress": {
+    "title": "توسعه وردپرس",
+    "subtitle": "طراحی و توسعه حرفه‌ای وب‌سایت‌های وردپرس، سفارشی شده برای نیازهای کسب و کار شما",
+    "wordpressAndWoocommerce": "توسعه وردپرس و ووکامرس",
+    "themeCustomization": "سفارشی‌سازی قالب",
+    "pluginDevelopment": "توسعه افزونه",
+    "ecommerceSetup": "راه‌اندازی فروشگاه اینترنتی",
+    "maintenanceSupport": "پشتیبانی و نگهداری"
+  },
   "seo": {
     "title": "سئو و بهینه‌سازی تخصصی",
+    "subtitle": "خدمات جامع سئو برای بهبود رتبه سایت شما",
     "description": "رتبه وبسایت خود را در موتورهای جستجو با استفاده از تکنیک‌های استاندارد سئو بهبود دهید.",
+    "onPageSeo": "سئو داخلی (On-Page)",
+    "offPageSeo": "سئو خارجی (Off-Page)",
+    "technicalSeo": "سئو تکنیکال",
+    "localSeo": "سئو محلی",
+    "localSeoDesc": "جذب مشتریان محلی با بهینه‌سازی نقشه گوگل و جستجوهای محلی",
+    "feature": {
+      "gmb": "بهینه‌سازی پروفایل کسب و کار گوگل",
+      "reviews": "مدیریت نظرات و شهرت آنلاین",
+      "localKeywords": "هدف‌گذاری کلمات کلیدی محلی",
+      "nearMe": "بهینه‌سازی برای جستجوهای 'نزدیک من'"
+    },
     "features": [
       "تحقیق کلمات کلیدی",
       "بهینه‌سازی محتوا",
