--- a/src/i18n/fa/web-development-services.json
+++ b/src/i18n/fa/web-development-services.json
@@ -1,24 +1,26 @@
 {
   "title": "خدمات توسعه وب",
-  "subtitle": "راهکارهای توسعه وب سفارشی",
+  "subtitle": "راهکارهای سفارشی توسعه وب",
   "webDevelopmentTitle": "خدمات توسعه وب",
-  "webDevelopmentDescription": "ما خدمات جامع توسعه وب را برای به ثمر رساندن ایده‌های شما ارائه می‌دهیم.",
+  "webDevelopmentDescription": "ما خدمات جامع توسعه وب را برای به واقعیت پیوستن ایده‌های شما ارائه می‌دهیم.",
   "ourServices": "خدمات ما",
   "frontendDev": "توسعه فرانت‌اند",
-  "frontendDesc": "ما رابط‌های کاربری زیبا و پاسخگو می‌سازیم.",
+  "frontendDesc": "ما رابط‌های کاربری زیبا و واکنش‌گرا می‌سازیم.",
   "backendDev": "توسعه بک‌اند",
   "backendDesc": "ما سیستم‌های بک‌اند قوی و مقیاس‌پذیر توسعه می‌دهیم.",
-  "feature.uiuxDesign": "طراحی UI/UX",
-  "feature.reactNextjs": "توسعه React و Next.js",
-  "feature.responsiveDesign": "طراحی واکنش‌گرا",
-  "feature.webVitals": "بهینه‌سازی Web Vitals",
-  "feature.animations": "انیمیشن‌ها و تعاملات",
-  "feature.apiIntegration": "یکپارچه‌سازی API",
-  "feature.restApi": "توسعه REST API",
-  "feature.python": "توسعه پایتون",
-  "feature.nodejs": "توسعه Node.js",
-  "feature.database": "طراحی و مدیریت پایگاه داده",
-  "feature.auth": "احراز هویت و مجوز",
-  "feature.cloudIntegration": "یکپارچه‌سازی با فضای ابری",
+  "feature": {
+    "uiuxDesign": "طراحی UI/UX",
+    "reactNextjs": "توسعه با React و Next.js",
+    "responsiveDesign": "طراحی واکنش‌گرا",
+    "webVitals": "بهینه‌سازی Web Vitals",
+    "animations": "انیمیشن‌ها و تعاملات",
+    "apiIntegration": "یکپارچه‌سازی API",
+    "restApi": "توسعه REST API",
+    "python": "توسعه پایتون",
+    "nodejs": "توسعه Node.js",
+    "database": "طراحی و مدیریت دیتابیس",
+    "auth": "احراز هویت و مجوزدهی",
+    "cloudIntegration": "یکپارچه‌سازی ابری"
+  },
   "keywords": "توسعه وب, خدمات, react, nextjs"
 }
