--- a/src/i18n/ar/local-seo.json
+++ b/src/i18n/ar/local-seo.json
@@ -1,11 +1,13 @@
 {
-  "localSeoTitle": "خدمات تحسين محركات البحث المحلية",
-  "localSeoDescription": "تمتع بالظهور لعملائك في منطقتك المحلية من خلال خدمات تحسين محركات البحث المحلية المتخصصة لدينا.",
-  "feature.gmb": "تحسين ملف تعريف نشاطي التجاري على Google",
-  "feature.localKeywords": "استهداف الكلمات المفتاحية المحلية",
-  "feature.nearMe": "تحسين عبارات \"بالقرب مني\"",
-  "feature.localLinks": "بناء الروابط المحلية",
-  "feature.reviews": "إدارة المراجعات",
-  "feature.localReports": "تقارير تحسين محركات البحث المحلية",
-  "keywords": "تحسين محركات البحث المحلية, نشاطي التجاري على جوجل, بالقرب مني, خدمات تحسين محركات البحث"
+  "localSeoTitle": "خدمات تحسين محركات البحث المحلي",
+  "localSeoDescription": "اجعل العملاء في منطقتك يعثرون عليك من خلال خدمات تحسين محركات البحث المحلي المتخصصة لدينا.",
+  "feature": {
+    "gmb": "تحسين ملف جوجل للأعمال",
+    "localKeywords": "استهداف الكلمات المفتاحية المحلية",
+    "nearMe": "التحسين لعمليات البحث \"القريبة مني\"",
+    "localLinks": "بناء الروابط المحلية",
+    "reviews": "إدارة المراجعات",
+    "localReports": "تقارير تحسين محركات البحث المحلي"
+  },
+  "keywords": "سئو محلي, جوجل للأعمال, قريب مني, خدمات سئو"
 }
