replace jpg with webp

--- a/src/i18n/ar/service-areas.json
+++ b/src/i18n/ar/service-areas.json
@@ -27,7 +27,7 @@
         "التسويق الرقمي",
         "تطوير ووردبريس"
       ],
-      "image": "/images/locations/muscat.jpg",
+      "image": "/images/locations/muscat.webp",
       "benefits": [
         "خبرة السوق المحلي في مسقط",
         "دعم اللغة العربية والإنجليزية",
