--- a/src/i18n/fa/service-areas.json
+++ b/src/i18n/fa/service-areas.json
@@ -27,7 +27,7 @@
         "دیجیتال مارکتینگ",
         "توسعه وردپرس"
       ],
-      "image": "/images/locations/tehran.jpg",
+      "image": "/images/locations/tehran.webp",
       "benefits": [
         "تخصص در بازار محلی تهران",
         "پشتیبانی زبان فارسی و انگلیسی",
