--- a/src/i18n/en/service-areas.json
+++ b/src/i18n/en/service-areas.json
@@ -27,7 +27,7 @@
         "Digital Marketing",
         "WordPress Development"
       ],
-      "image": "/images/locations/muscat.jpg",
+      "image": "/images/locations/muscat.webp",
       "benefits": [
         "Local market expertise in Muscat",
         "Arabic & English language support",
